Some enhanciment in the code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,6 @@
 
 <footer class="footer">
   <div class="container">
-    <span>{{ information() }} - {{ year() }} </span>
+    <span>{{ year() }} - {{ information() }}</span>
   </div>
 </footer>
